# tapsdk-pc.js

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  deploy-docs.yml  publish.yml  test.yml
crates/tapsdk-pc/: Cargo.toml
crates/tapsdk-pc-sys/: Cargo.toml  build.rs  wrapper.h
crates/tapsdk-pc-sys/sdk/: taptap_api.h  taptap_api.lib  taptap_cloudsave.h
crates/tapsdk-pc-sys/src/: lib.rs
crates/tapsdk-pc/src/: callback.rs  cloudsave.rs  dlc.rs  error.rs  lib.rs  ownership.rs  sdk.rs  user.rs
crates/tapsdk-pc/tests/: integration_test.rs
docs/: .gitignore  examples.md  getting-started.md  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: cloudsave.md  events.md  index.md  tapsdk.md  types.md
