[workspace]
resolver = "2"
members = ["crates/*", "packages/*"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tapsdk-pc = { version = "0.2", path = "crates/tapsdk-pc" }
tapsdk-pc-sys = { version = "0.2", path = "crates/tapsdk-pc-sys" }
thiserror = "2.0"
