[package]
name = "tapsdk-pc-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raw FFI bindings to TapTap PC SDK"
links = "taptap_api"
include = ["src/**/*", "sdk/**/*", "build.rs", "wrapper.h"]

[package.metadata.tapsdk]
upstream-version = "4.1.1"

[build-dependencies]
bindgen = "0.69"

[features]
default = []
