[package]
name = "tapsdk-pc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level Rust bindings to TapTap PC SDK"

[package.metadata.tapsdk]
upstream-version = "4.1.1"

[dependencies]
tapsdk-pc-sys.workspace = true
thiserror.workspace = true
